--- a/PÁGINA ZEN GARDEN.html
+++ b/PÁGINA ZEN GARDEN.html
@@ -4,6 +4,47 @@
 	<meta charset="utf-8">
 <title>CSS Zen Garden: The Beauty of CSS Design</title>
 <style>
+/* 1. Estrutura geral */
+body {
+  width: 900px;
+  margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+p {
+  text-indent: 1em;
+}
+
+/* 2. Títulos */
+h1, h2, h3 {
+  text-align: center;
+}
+h1 { font-size: 1.8rem; }
+h2 { font-size: 1.4rem; }
+h3 { font-size: 1.2rem; }
+
+/* 3. Seções de resumo e principal */
+#zen-summary {
+  text-align: right;
+}
+#zen-supporting p {
+  line-height: 1.5;
+}
+
+/* 4. Abreviaturas */
+abbr {
+  font-variant: small-caps;
+}
+
+/* Estilos existentes */
+.principal { color: #245cbd; }
+.background { color: #d88179; }
+.destaque { color: #e00a0a; }
+</style>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+<title>CSS Zen Garden: The Beauty of CSS Design</title>
+<style>
 	
 .principal { color: #245cbd; }
 
